<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ImageView android:layout_height="100dp"
        android:layout_width="100dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:id="@+id/logo"/>
    ​
    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/register_nombre"
        app:layout_constraintStart_toEndOf="@+id/logo"
        android:hint="@string/register_nombre"
        android:ems="10"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"/>
    ​
    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/register_apellido"
        app:layout_constraintStart_toEndOf="@+id/logo"
        android:hint="@string/register_apellido"
        android:ems="10" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_nombre"
        android:inputType="textPersonName"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/register_email"
        android:hint="@string/register_email"
        android:ems="10"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_apellido"
        android:inputType="textEmailAddress"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/register_telefono"
        android:hint="@string/register_tlfno"
        android:ems="10" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_email"
        android:inputType="number"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/register_alias"
        android:hint="@string/register_alias"
        android:ems="10"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_telefono"
        android:inputType="textPersonName"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/register_contrasena"
        android:hint="@string/register_contrasena"
        android:ems="10"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_alias"
        android:inputType="textPassword"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:id="@+id/register_confirmar"
        android:hint="@string/register_confirmar"
        android:ems="10" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_contrasena"
        android:inputType="textPassword"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="225dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:id="@+id/register_btn_send"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/register_confirmar"
        android:text="@string/register_btn_enviar"
        android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>

